# stephenkelzer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/: CODEOWNERS  release-drafter-template.yml
.github/workflows/: azure.yml  build_and_test.yml  deploy-to-azure.yml  deploy.yml  release-drafter.yml
public/: index.html
src/: app.rs  index.css  lib.rs  main.rs
src/_app/: App.js  App.test.js
src/body/: body.rs
src/footer/: footer.css  footer.js  footer.rs  footer.test.js
src/header/: header.css  header.js  header.rs  header.test.js  made_by_bar.rs  mod.rs
src/header/social_bar/: mod.rs  social_bar.rs  social_button.rs
src/misc/: mario.js
src/pages/home/: home.css  home.js  home.test.js
